[metadata]
name = vaultpy
version = 0.0.6
author = Tim Loyer
author_email = tloyer@apps.directemployers.org
description = A module to parse injected Vault secrets and track their usage with Datadog.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DirectEmployers/vaultpy

[options]
packages = find:
python_requires = >=3.6
install_requires =
    datadog>=0.36.0
